# Sistemas_Distribuidos_Practica2

./: create_filemanager_image_docker.sh  create_multmatrix_image_docker.sh  delete_all_deployments.sh  delete_all_services.sh  delete_filemanager_image_docker.sh  delete_multmatrix_image_docker.sh  filemanager.yaml  filemanager_service.yaml  multmatrix.yaml  multmatrix_service.yaml  recreate_sharedvol_filemanager.sh  start_and_copyfiles_filemanager_deployment.sh  start_filemanager_service.sh  start_multmatrix_deployment.sh  start_multmatrix_service.sh
Archivos_compilacion/fileManager/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fileManager  filemanager.cpp  filemanager.h  filemanager_imp.cpp  filemanager_imp.h  filemanager_stub.cpp  filemanager_stub.h  mainCliente.cpp  mainServidor.cpp  main_fm.cpp  subir.txt
Archivos_compilacion/fileManager/server/: mainServidor
Archivos_compilacion/fileManager/server/dirprueba/: pepe.txt
Archivos_compilacion/multMatrix/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainClienteMultMatrix  mainClienteMultMatrix.cpp  mainServidorMultMatrix  mainServidorMultMatrix.cpp  main_multMatrix.cpp  multMatrix  multmatrix.cpp  multmatrix.h  multmatrix_imp.cpp  multmatrix_imp.h  multmatrix_stub.cpp  multmatrix_stub.h  resultado.txt  resultado2.txt
filemanager/: Dockerfile  mainCliente  mainServidor
filemanager/dircli/: ironmancli.txt  pepe.txt  pepecli.txt
filemanager/dirpruebabackup/: ironman.txt
multmatrix/: Dockerfile  mainClienteMultMatrix  mainServidorMultMatrix
